[package]
name = "rust-actix-todo-app-example"
version = "0.1.0"
edition = "2018"
authors = ["Nobutaka OSHIRO"]
repository = "https://github.com/notakaos/rust-actix-todo-app-example"
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
serde = "1.0.126"
